--- a/src/app/create-registration/create-registration.component.html
+++ b/src/app/create-registration/create-registration.component.html
@@ -129,6 +129,7 @@
           </mat-form-field>
         </div>
         </div>
-        <button (click)="submit()" class="mt-4" mat-raised-button color="accent">Submit</button>
+        <button *ngIf="!isUpdateActive" (click)="submit()" class="mt-4" mat-raised-button color="accent">Submit</button>
+        <button *ngIf="isUpdateActive" (click)="update()" class="mt-4" mat-raised-button color="accent">Update</button>
     </form>
   </div>
