--- a/src/app/registration-list/registration-list.component.html
+++ b/src/app/registration-list/registration-list.component.html
@@ -7,7 +7,7 @@
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Firstname" #input>
     </mat-form-field>
-  </div>
+</div>
   
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
@@ -71,9 +71,9 @@
         <td mat-cell *matCellDef="let row">
           <button mat-icon-button [routerLink]="['/detail', row.id]" class="mx-2" color="warn"><i class="fa fa-eye"
               aria-hidden="true"></i></button>
-          <button mat-icon-button (click)="edit(row.id)" class="mx-2" color="accent"><i class="fa fa-pencil"
+          <button (click)="edit(row.id)" mat-icon-button class="mx-2" color="accent"><i class="fa fa-pencil"
               aria-hidden="true"></i></button>
-          <button  mat-icon-button color="primary"><i class="fa fa-trash"
+          <button (click)="delete(row.id)" mat-icon-button color="primary"><i class="fa fa-trash"
               aria-hidden="true"></i></button>
         </td>
       </ng-container>
